--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
     padding: 0;
 }
 
+ul,
+li {
+    list-style-type: none;
+    padding: 8px 0;
+}
+
 body {
     background-color: #efefef;
 }
@@ -25,12 +31,28 @@ header {
 }
 
 /* main */
+
+h2 {
+    margin-top: 20px;
+}
+
 .page-content {
     padding: 20px;
 }
 
 .button {
     padding: 5px;
+    border-radius: 5px;
+}
+
+.bg-blue {
+    background-color: rgb(6, 158, 209);
+}
+
+.border-button {
+    padding: 10px 0;
+    border-bottom: solid #efefef 1px;
+
 }
 
 
@@ -41,21 +63,44 @@ span {
 .tick-x {
     border: solid red 1px;
     border-radius: 50px;
-    padding: 1px;
+    padding: 2px 6px;
     color: red;
 }
 
 .tick-check {
     border: solid green 1px;
-    border-radius: 40px;
-    padding: 1px;
+    border-radius: 50%;
+    padding: 2px 6px;
     color: green;
 }
 
 .badge {
-    background-color: rgb(19, 107, 180);
     color: white;
     font-size: 10px;
     border-radius: 30px;
-    padding: 3px;
+    padding: 3px 10px;
+}
+
+.bg-blu {
+    background-color: rgb(19, 107, 180);
+}
+
+.bg-violet {
+    background-color: rgb(168, 8, 146);
+}
+
+.bg-green {
+    background-color: rgb(9, 180, 26);
+}
+
+.bg-orange {
+    background-color: rgb(252, 164, 0);
+}
+
+.bg-pink {
+    background-color: rgb(240, 72, 189);
+}
+
+.bg-lightgreen {
+    background-color: rgb(101, 251, 121);
 }
